crates/solidity-v2/testing/snapshots/diagnostics_output/structure/invalid_using_directive_container/interface/generated/solc/0.8.13-failure.txt
# This file is generated automatically by infrastructure scripts. Please don't edit by hand.

Diagnostics: 1

[SyntaxError 9088] Error: The "using for" directive is not allowed inside interfaces.
   ╭─[input.sol:7:5]
   │
 7 │     using L for uint256;
   │     ──────────┬─────────  
   │               ╰─────────── Error occurred here.
───╯
